fix image overflow

--- a/src/components/utils/ImageView.module.css
+++ b/src/components/utils/ImageView.module.css
@@ -6,7 +6,8 @@
 }
 
 .image {
-  width: 100%;
+  max-width: 100%;
+  max-height: 100%;
 }
 
 .info {
